@@ -16,7 +16,8 @@ Description:  Variable elimination (Gaussian elimination, Fourier-Motzkin elimin
 Version: 0.1.1.0
 URL: https://github.com/data-cleaning/lintools
 BugReports: https://github.com/data-cleaning/lintools/issues
-Date: 2016-01-22
+Date: 2016-03-04
+Imports: utils
 Suggests:
     testthat,
     knitr
