@@ -1,7 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
-S3method(print,sparseConstraints)
-S3method(sparseConstraints,data.frame)
+S3method(print,sparse_constraints)
+S3method(sparse_constraints,data.frame)
 export(block_index)
 export(compact)
 export(echelon)
@@ -13,6 +13,8 @@ export(pinv)
 export(project)
 export(ranges)
 export(sparseConstraints)
+export(sparse_constraints)
 export(sparse_project)
 export(subst_value)
+importFrom(utils,combn)
 useDynLib(lintools)
